manifests/stage/ciyex-deployment-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciyex-app-stage
  labels:
    app: ciyex-app-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciyex-app-stage
  template:
    metadata:
      labels:
        app: ciyex-app-stage
    spec:
      containers:
        - name: ciyex-app-stage
          image: IMAGE_URL:IMAGE_TAG
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080  # Spring Boot
            - containerPort: 3000  # EHR UI (Next.js)
            - containerPort: 3001  # Portal UI (Next.js)
            - containerPort: 3002  # Admin UI (Next.js)
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
