manifests/stage/ciyex-service-stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciyex-app-stage
spec:
  type: ClusterIP
  ports:
    - name: backend-api
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ciyex-app-stage
