manifests/stage/ciyex-ingress-stage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ingress-stage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - stg.ciyex.com
      secretName: ciyex-ingress-stage-tls
  rules:
    - host: stg.ciyex.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ciyex-app-stage
                port:
                  number: 8080
